# uv_paths_with_spaces_test

./: .whitesource  pyproject.toml
